crates/reifydb-testing/tests/testscript/errors/empty_tag.error
parse error at line 1 column 18 for "\"command []\"":
command []
                 ^